fix: change order of layout items on mobile

--- a/components/o-topper/src/scss/themes/_portrait.scss
+++ b/components/o-topper/src/scss/themes/_portrait.scss
@@ -9,13 +9,19 @@
 		padding: 0;
 
 		.o-topper__content {
+			order: 3;
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
 			padding: 20px 10px;
 		}
 
+		.o-topper__background {
+			order: 2;
+		}
+
 		.o-topper__visual {
+			order: 1;
 			min-height: 350px;
 		}
 
@@ -24,6 +30,10 @@
 			width: 100%;
 			height: 350px;
 			float: right;
+		}
+
+		.o-topper__image-caption {
+			padding-bottom: 10px;
 		}
 	}
 
@@ -60,6 +70,10 @@
 			@include oGridRespondTo($until: M) {
 				max-height: 480px;
 			}
+		}
+
+		.o-topper__image-caption {
+			margin-bottom: -20px;
 		}
 	}
 
@@ -103,6 +117,5 @@
 		width: 100%;
 		float: right;
 		box-sizing: border-box;
-		margin-bottom: -20px;
 	}
 }
